--- a/1.html
+++ b/1.html
@@ -15,7 +15,7 @@
 
 
   <h1>BLOG</h1>
-  안녕하세요. 이 웹 사이트는 <strong>게임 개발자 <u>코보</u></strong>의 개인 웹 사이트입니다.
+  안녕하세요. 이 웹 사이트는 <strong>개발자 <u>코보</u></strong>의 개인 웹 사이트입니다.
   <a href="https://docs.unrealengine.com/ko/index.html" target="_blank"
   title="언리얼 엔진 4 공식 문서입니다.">언리얼 엔진 4 문서</a>
   <img src="Fimg.png" width="10%">
